--- a/style.css
+++ b/style.css
@@ -2734,7 +2734,6 @@ figcaption {
 }
 
 .header-background-image {
-  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -2742,16 +2741,16 @@ figcaption {
   bottom: 0;
   width: 100%;
   height: 100%;
-  object-fit: cover;  /* Ovim postavljamo da slika bude proporcionalno skalirana */
-  z-index: -1;  /* Ovaj z-index osigurava da slika bude iza sadržaja */
-  opacity: 0;
-  transition: opacity 1s ease-in-out;  /* Opciono: animacija za postepeno pojavljivanje slike */
+  object-fit: cover;
+  opacity: 1;
+
+  z-index: -1;
 }
 
 /* Opcionalno: Dodajte animaciju za sliku da se postepeno pojavljuje */
 .header-wrapper img {
   opacity: 1;
-  transition: opacity 1s ease-in-out;
+  transition: opacity 0.8s ease-in-out;
 }
 
 .header-wrapper:hover .header-background-image {
